Projet total/Assembleur/tests/bad/testfile-bad-mov-1.ms
; can't move memory to memory
mov (%rax) (%rax)